# aprendoC

./: .gitignore  CMakeLists.txt  README.md
src/: main.c
src/01_dialogo_con_el_usuario/: CMakeLists.txt  ej_01.c  ej_02.c  ej_03.c  ej_04.c  ej_05.c  ej_06.c  ej_07.c  ej_08.c  ej_10.c  ej_11.c
src/02_control_de_la_secuencia_de_ejecucion_del_programa/: ej_01.c  ej_02.c  ej_03.c  ej_04.c  ej_05.c
src/03_numeros_y_tablas/: CMakeLists.txt  ej_01.c  ej_02.c  ej_03.c  ej_11.c
src/04_numeros_y_tablas_las_3_en_raya/: ej_02.c  ej_03.c
src/05_operaciones_con_palabras/: CMakeLists.txt  ej_02.c  ej_03.c  ej_04.c  ej_06.c  ej_08.c
src/06_direcciones_y_ficheros_en_disco/: CMakeLists.txt  ej_02.c  ej_03.c  ej_05.c  ej_06.c  ej_08.c  ej_09.c  ej_11.c
src/07_un_programa_para_practicar_la_agenda/: CMakeLists.txt  ej_01.c  ej_02.c  ej_03A.c  ej_03C.c  ej_03E.c  ej_03G.c  ej_03J.c  ej_03L.c
src/08_prosiguiendo_con_el_aprendizaje_de_C/: CMakeLists.txt  ej_04.c  ej_05.c  ej_06.c  ej_09.c
src/1_DIÁLOGO_CON_EL_USUARIO/: CMakeLists.txt  ej_02.c  ej_03.c  ej_09.c  ej_11.c  ej_12.c
src/2_CONTROL_DE_SECUENCIA_DE_EJECUCIÓN_DEL_PROGRAMA/: CMakeLists.txt  ej_04.c  ej_05.c  ej_06.c  ej_07.c
src/3_NUMEROS_Y_TABLAS/: CMakeLists.txt  ej_01.c  ej_02.c  ej_03.c  ej_04.c  ej_05.c  ej_06.c  ej_07.c  ej_08.c  ej_09.c  ej_10.c
src/4_NUMEROS_Y_TABLAS___LAS_3_EN_RAYA/: CMakeLists.txt  ej_01.c  ej_02.c  ej_03.c
src/5_OPERACIONES_CON_PALABRAS/: CMakeLists.txt  ej_01.c  ej_02.c  ej_03.c  ej_04.c  ej_05.c  ej_06.c  ej_07.c  ej_08.c  ej_09.c
src/6_DIRECCIONES_Y_FICHEROS_EN_DISCO/: CMakeLists.txt  ej_01.c  ej_02.c  ej_03.c  ej_04.c  ej_05.c  ej_06.c  ej_07.c  ej_08.c  ej_09.c  ej_10.c  ej_11.c  ej_12.c  ej_13.c
src/7_UN_PROGRAMA_PARA_PRACTICAR___LA_AGENDA/: ej_03B.c  ej_03D.c  ej_03F.c  ej_03H.c  ej_03I.c  ej_03K.c
src/8_PROSIGUIENDO_CON_APRENDIZAJE_DE_C/: ej_01.c  ej_02.c  ej_03.c  ej_07.c  ej_08.c  ej_10.c
