cmake_minimum_required(VERSION 3.26)
project(aprendoC C)

set(CMAKE_C_STANDARD 11)

add_subdirectory(src/1_DIÁLOGO_CON_EL_USUARIO)
add_subdirectory(src/2_CONTROL_DE_SECUENCIA_DE_EJECUCIÓN_DEL_PROGRAMA)
add_subdirectory(src/3_NUMEROS_Y_TABLAS)
add_subdirectory(src/4_NUMEROS_Y_TABLAS___LAS_3_EN_RAYA)
add_subdirectory(src/5_OPERACIONES_CON_PALABRAS)
add_subdirectory(src/6_DIRECCIONES_Y_FICHEROS_EN_DISCO)
add_subdirectory(src/7_UN_PROGRAMA_PARA_PRACTICAR___LA_AGENDA)
add_subdirectory(src/8_PROSIGUIENDO_CON_APRENDIZAJE_DE_C)

add_executable(aprendoC src/main.c)
