add_executable(ej_01 ej_01.c)
add_executable(ej_02 ej_02.c)
add_executable(ej_03 ej_03.c)
add_executable(ej_04 ej_04.c)
add_executable(ej_05 ej_05.c)
add_executable(ej_06 ej_05.c)
add_executable(ej_07 ej_07.c)
add_executable(ej_08 ej_08.c)
add_executable(ej_09 ej_09.c)
add_executable(ej_10 ej_10.c)
add_executable(ej_11 ej_11.c)
add_executable(ej_12 ej_12.c)