add_executable(ej_01_01 ej_01.c)
add_executable(ej_01_02 ej_02.c)
add_executable(ej_01_03 ej_03.c)
add_executable(ej_01_04 ej_04.c)
add_executable(ej_01_05 ej_05.c)
add_executable(ej_01_06 ej_05.c)
add_executable(ej_01_07 ej_07.c)
add_executable(ej_01_08 ej_08.c)
add_executable(ej_01_09 ej_09.c)
add_executable(ej_01_10 ej_10.c)
add_executable(ej_01_11 ej_11.c)
add_executable(ej_01_12 ej_12.c)