add_executable(ej_03_01 ej_01.c)
add_executable(ej_03_02 ej_02.c)
add_executable(ej_03_03 ej_03.c)
add_executable(ej_03_04 ej_04.c)
add_executable(ej_03_05 ej_05.c)
add_executable(ej_03_06 ej_06.c)
add_executable(ej_03_07 ej_07.c)
add_executable(ej_03_08 ej_08.c)
add_executable(ej_03_09 ej_09.c)
add_executable(ej_03_10 ej_10.c)
add_executable(ej_03_11 ej_11.c)