add_executable(ej_06_01 ej_01.c)
add_executable(ej_06_02 ej_02.c)
add_executable(ej_06_03 ej_03.c)
add_executable(ej_06_04 ej_04.c)
add_executable(ej_06_05 ej_05.c)
add_executable(ej_06_06 ej_06.c)
add_executable(ej_06_07 ej_07.c)
add_executable(ej_06_08 ej_08.c)
add_executable(ej_06_09 ej_09.c)
add_executable(ej_06_10 ej_10.c)
add_executable(ej_06_11 ej_11.c)
add_executable(ej_06_12 ej_12.c)
add_executable(ej_06_13 ej_13.c)