add_executable(ej_07_01 ej_01.c)
add_executable(ej_07_02 ej_02.c)
add_executable(ej_07_03A ej_03A.c)
add_executable(ej_07_03B ej_03B.c)
add_executable(ej_07_03C ej_03C.c)
add_executable(ej_07_03D ej_03D.c)
add_executable(ej_07_03E ej_03E.c)
add_executable(ej_07_03F ej_03F.c)
add_executable(ej_07_03G ej_03G.c)
add_executable(ej_07_03H ej_03H.c)
add_executable(ej_07_03I ej_03I.c)
add_executable(ej_07_03J ej_03J.c)
add_executable(ej_07_03K ej_03K.c)
add_executable(ej_07_03L ej_03L.c)