add_executable(ej_08_01 ej_01.c)
add_executable(ej_08_02 ej_02.c)
add_executable(ej_08_03 ej_03.c)
add_executable(ej_08_04 ej_04.c)
add_executable(ej_08_05 ej_05.c)
add_executable(ej_08_06 ej_06.c)
add_executable(ej_08_07 ej_07.c)
add_executable(ej_08_08 ej_08.c)
add_executable(ej_08_09 ej_09.c)
add_executable(ej_08_10 ej_10.c)