add_executable(ej_01_01_Hola_amigos ej_01.c)
add_executable(ej_01_02_Impresion_de_un_entero ej_02.c)
add_executable(ej_01_03_Impresion_de_un_caracter ej_03.c)
add_executable(ej_01_04_Impresion_de_un_caracter_y_un_entero ej_04.c)
add_executable(ej_01_05_Impresion_de_dos_caracteres ej_05.c)
add_executable(ej_01_06_Impresion_de_un_numero_en_punto_flotante ej_05.c)
add_executable(ej_01_07_Impresion_de_un_numero ej_07.c)
add_executable(ej_01_08_Impresion_del_codigo_ASCII_de_un_caracter ej_08.c)
add_executable(ej_01_09_Utilizacion_de_scanf_y_printf_int ej_09.c)
add_executable(ej_01_10_Utilizacion_de_scanf_y_printf_float ej_10.c)
add_executable(ej_01_11_Utilizacion_de_scanf_y_printf_char ej_11.c)
add_executable(
  ej_01_12_Impresion_del_codigo_ASCII_del_caracter_tecleado_por_el_usuario 
  ej_12.c)