add_executable(ej_02_01_Impresion_codigo_ASCII_version_1 ej_01.c)
add_executable(ej_02_02_Impresion_codigo_ASCII_version_2 ej_02.c)
add_executable(ej_02_03_Impresion_codigo_ASCII_version_3 ej_03.c)
add_executable(ej_02_04_Impresion_codigo_ASCII_version_4 ej_04.c)
add_executable(ej_02_05_Menu_del_programa_conversion_ASCII_version_1 ej_05.c)
add_executable(ej_02_06_Menu_del_programa_conversion_ASCII_version_2 ej_06.c)
add_executable(ej_02_07_Conversion_ASCII_validacion_datos_ingresados ej_07.c)