add_executable(ej_03_01_Salarios_semanales_escrito_facil ej_01.c)
add_executable(ej_03_02_Salarios_semanales_facil_de_entender ej_02.c)
add_executable(ej_03_03_Salarios_semanales_y_salario_anual ej_03.c)
add_executable(ej_03_04_Division_en_punto_flotante ej_04.c)
add_executable(ej_03_05_Division_de_enteros ej_05.c)
add_executable(ej_03_06_Division_de_enteros_y_obtencion_del_resto ej_06.c)
add_executable(ej_03_07_Salarios_semanales_con_funcion_borrpant ej_07.c)
add_executable(ej_03_08_Problemas_aritmeticos ej_08.c)
add_executable(ej_03_09_Salarios_semanales_con_informe_final ej_09.c)
