add_executable(ej_05_01_Inicializacion_de_una_cadena ej_01.c)
add_executable(ej_05_02_Operaciones_con_una_cadena ej_02.c)
add_executable(ej_05_03_Uso_de_un_contador_en_operaciones_con_una_cadena 
                ej_03.c)
add_executable(ej_05_04_Dialogo_con_el_usuario ej_04.c)
add_executable(ej_05_05_Dialogo_con_el_usuario_version_mejorada_01 ej_05.c)
add_executable(ej_05_06_Dialogo_con_el_usuario_version_mejorada_02 ej_06.c)
add_executable(ej_05_07 ej_07.c)
add_executable(ej_05_08 ej_08.c)
add_executable(ej_05_09 ej_09.c)
