add_executable(ej_06_01_Ejemplo_utilizacion_de_punteros ej_01.c)
add_executable(ej_06_02_Forma_erronea_de_modificar_valores_de_parametros ej_02.c)
add_executable(ej_06_03_Forma_correcta_de_modificar_valores_de_parametros ej_03.c)
add_executable(ej_06_04_Impresion_de_una_tabla_metodo_de_alto_nivel ej_04.c)
add_executable(ej_06_05_Impresion_de_una_tabla_metodo_de_bajo_nivel ej_05.c)
add_executable(ej_06_06_Escribir_los_datos_introducidos_por_el_usuario_en_un_fichero_de_texto_en_disco ej_06.c)
add_executable(ej_06_07_Anadir_los_datos_introducidos_por_el_usuario_a_un_fichero_de_texto_en_disco ej_07.c)
add_executable(ej_06_08_Leer_el_fichero_de_notas ej_08.c)
add_executable(ej_06_09_Introducir_palabras_de_vocabulario_en_fichero_V_Preliminar ej_09.c)
add_executable(ej_06_10_Leer_lista_de_palabras_metodo_de_alto_nivel ej_10.c)
add_executable(ej_06_11_Leer_lista_de_palabras_metodo_de_bajo_nivel ej_11.c)
add_executable(ej_06_12_Introducir_palabras_de_vocabulario_en_fichero_V_Definitiva ej_12.c)
add_executable(ej_06_13_Programa_de_preguntas_Espanol_Aleman ej_13.c)